--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,5 +1,20 @@
+body {
+    height: 100vh;
+}
+
 section {
     width: 600px;
+    height: 60vh;
+    min-height: 400px;
+    max-height: 600px;
+}
+
+header > img {
+    min-height: 100px;
+    max-height: 300px;
+    width: 30vw;
+    min-width: 150px;
+    max-width: 450px;
 }
 
 #link-button {
