--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2785,9 +2785,10 @@ div.dt-button-info {
 .form-control {
   font-size: 0.9rem;
 }
-select.form-control:not([size]):not([multiple]) {
-  height: 2.05rem;
-}
+/*select.form-control:not([size]):not([multiple]) {*/
+/*  height: 2.05rem;*/
+/*}*/
+
 .input-sm,
 .form-control-sm {
   height: 31px;
