--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1902,9 +1902,9 @@ button.btn-info.dim {
 button.btn-info.dim:active {
   box-shadow: inset 0 0 0 #1eacae, 0 2px 0 0 #1eacae, 0 5px 3px #999 !important;
 }
-button.btn-success.dim {
-  box-shadow: inset 0 0 0 #1872ab, 0 5px 0 0 #1872ab, 0 10px 5px #999 !important;
-}
+/*button.btn-success.dim {*/
+/*  box-shadow: inset 0 0 0 #1872ab, 0 5px 0 0 #1872ab, 0 10px 5px #999 !important;*/
+/*}*/
 button.btn-success.dim:active {
   box-shadow: inset 0 0 0 #1872ab, 0 2px 0 0 #1872ab, 0 5px 3px #999 !important;
 }
